Rough in multitenant stubs